2003-03-28  Eric Botcazou  <ebotcazou@libertysurf.fr>

	PR c/8281
	* config/sparc/sparc.md (movdi_insn_sp32_v9): Remove 'f-f' alternative.
	(movdi reg/reg split): Match only on sparc32, and v9 when int regs.

2003-03-28  Alan Modra  <amodra@bigpond.net.au>

	* config/alpha/elf.h (ASM_OUTPUT_ALIGNED_BSS): Remove unnecessary
	globalize_label.
	* config/arm/unknown-elf.h (ASM_OUTPUT_ALIGNED_BSS): Likewise.
	* config/i960/i960.h (ASM_OUTPUT_ALIGNED_BSS): Likewise. 
	* config/m32r/m32r.h (ASM_OUTPUT_ALIGNED_BSS): Likewise.
	* config/mips/elf.h (ASM_OUTPUT_ALIGNED_BSS): Likewise.
	* config/mips/linux.h (ASM_OUTPUT_ALIGNED_BSS): Likewise.
	* config/sparc/sparc.h (ASM_OUTPUT_ALIGNED_BSS): Likewise.
	* config/v850/v850.c (v850_output_aligned_bss): Likewise.

2003-03-28  Alan Modra  <amodra@bigpond.net.au>

	* loop.c: (find_mem_in_note_1, find_mem_in_note): New functions.
	(replace_loop_mems): Add "written" param.  Remove invalid REG_EQUAL
	notes after hoisting.
	(load_mems): Adjust replace_loop_mems call.

2003-03-28  Eric Botcazou  <ebotcazou@libertysurf.fr>
            Richard Henderson  <rth@redhat.com>

	PR target/10114 and PR target/10084
	* dwarf2out.c (mem_loc_descriptor): Handle LO_SUM.

2003-03-27  Richard Henderson  <rth@redhat.com>

	* config/alpha/alpha.md (adddi_er_high_l): Valid only after reload.

2003-03-27  Roger Sayle  <roger@eyesopen.com>

	* fold-const.c (fold_inf_compare):  New function to simplify FP
	comparisons against +Infinity or -Infinity.
	(fold):  Optimize floating point comparisons against Infs and NaNs.

2003-03-27  Janis Johnson  <janis187@us.ibm.com>

	* libgcov.c: Provide only dummy functions if libc is not available.

2003-03-27  Richard Henderson  <rth@redhat.com>

	* real.h (struct real_value): Add signalling.
	(EXP_BITS): Decrement.
	* real.c (get_canonical_qnan): Don't set MSB-1.
	(get_canonical_snan): Likewise.  Set signalling.
	(real_identical): Compare signalling.
	(round_for_format): Remove force-one-bit on code.