@@ -1,5 +1,9 @@
 2003-03-28  Eric Botcazou  <ebotcazou@libertysurf.fr>
 
+	* gcc.dg/ultrasp8.c: New test.
+
+2003-03-28  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
 	* gcc.dg/ultrasp7.c: New test.
 
 2003-03-28  Nathan Sidwell  <nathan@codesourcery.com>
