@@ -1,5 +1,11 @@
 2003-03-28  Eric Botcazou  <ebotcazou@libertysurf.fr>
 
+	PR target/10067
+	* config/sparc/sparc.md (jump pattern): Correct order
+	when issuing the annuling marker.
+
+2003-03-28  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
 	PR c/8281
 	* config/sparc/sparc.md (movdi_insn_sp32_v9): Remove 'f-f' alternative.
 	(movdi reg/reg split): Match only on sparc32, and v9 when int regs.
